# bid_service

./: AGENTS.md  pyproject.toml
.github/workflows/: build-push-deploy.yml
alembic/versions/: 7c6d6d2edc60_add_bid_blocking_and_payment_fields.py  90e96cf4902f_init.py  dadf6a610765_add_buy_now_option.py
app/: __init__.py  config.py  main.py
app/core/: utils.py
app/database/crud/: __init__.py  bid.py
app/database/models/: __init__.py  bid.py
app/database/schemas/: bid.py
app/routers/v1/: health.py  private.py
app/routers/v1/bid/: admin.py  user.py
app/rpc_client/: account.py  auth_rcp.py
app/schemas/: bid.py  bid_enums.py
app/services/: rabbit_service.py
tests/routers/v1/: test_health.py
tests/routers/v1/bid/: conftest.py  stubs.py  test_buy_now.py  test_get_all_bids.py  test_mark_bid_as_lost.py  test_mark_bid_as_won.py  test_user_bid.py
