[tool.poetry]
name = "vinaslt-bid-service"
version = "0.1.0"
description = ""
authors = ["peyro <peyrovskaaa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.121.0"
alembic = "^1.17.1"
pydantic-settings = "^2.11.0"
fastapi-problem = "^0.11.6"
grpcio = "^1.76.0"
protobuf = "^6.33.0"
psycopg2-binary = "^2.9.11"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
